fix footer overflow

--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -1,7 +1,7 @@
 footer {
   background: #0f141e;
   width: 100%;
-  padding: 10px;
+  padding: 10px 0;
   position: absolute;
   bottom: 0;
   display: flex;
